--- a/master.css
+++ b/master.css
@@ -32,6 +32,7 @@ footer, section:after
 {
     min-height: 60px;
 }
+
 footer
 {
     background-color: #f5f5f5;
@@ -41,6 +42,11 @@ footer
 {
     margin-top: 15px;
     font-size: 0.7em;
+}
+
+.socialCol
+{
+    text-align:right;
 }
 
 nav, .title
@@ -64,7 +70,6 @@ nav, .title
     border-bottom: 2px solid black;
 }
 
-
 .flag1, .flag
 {
     width: 20px;
@@ -72,10 +77,10 @@ nav, .title
     margin-left: 20px;
 }
 
-.flag1
+.div-7
 {
+    margin-top: -7px;
 }
-
 
 #github
 {
@@ -112,61 +117,6 @@ button .barColor
     font-size: 1em;
 }
 
-.animHtml
-{
-    -moz-animation:animHtml 2s ease-out;
-    -webkit-animation:animHtml 2s ease-out;
-}
-
-@-moz-keyframes animHtml      {0%  { width:0px; opacity:0%;} 50% { width:0px; opacity:100%;} 100%{ width:80%;}  }
-@-webkit-keyframes animHtml   {0%  { width:0px; opacity:0%;} 50% { width:0px; opacity:100%;} 100%{ width:80%;}  }
-
-.animBootstrap
-{
-    -moz-animation:animBootstrap 2s ease-out;
-    -webkit-animation:animBootstrap 2s ease-out;
-}
-
-@-moz-keyframes animBootstrap     {0%  { width:0px; opacity:0%;} 50% { width:0px; opacity:100%;} 100%{ width:70%;}  }
-@-webkit-keyframes animBootstrap   {0%  { width:0px; opacity:0%;} 50% { width:0px; opacity:100%;} 100%{ width:70%;}  }
-
-.animJQuery
-{
-    -moz-animation:animJQuery 2s ease-out;
-    -webkit-animation:animJQuery 2s ease-out;
-}
-
-@-moz-keyframes animJQuery    {0%  { width:0px; opacity:0%;} 50% { width:0px; opacity:100%;} 100%{ width:50%;}  }
-@-webkit-keyframes animJQuery   {0%  { width:0px; opacity:0%;} 50% { width:0px; opacity:100%;} 100%{ width:50%;}  }
-
-.animPhp
-{
-    -moz-animation:animPhp 2s ease-out;
-    -webkit-animation:animPhp 2s ease-out;
-}
-
-@-moz-keyframes animPhp       {0%  { width:0px; opacity:0%;} 50% { width:0px; opacity:100%;} 100%{ width:60%;}  }
-@-webkit-keyframes animPhp   {0%  { width:0px; opacity:0%;} 50% { width:0px; opacity:100%;} 100%{ width:60%;}  }
-
-.animMysql
-{
-    -moz-animation:animMysql 2s ease-out;
-    -webkit-animation:animMysql 2s ease-out;
-}
-
-@-moz-keyframes animMysql     {0%  { width:0px; opacity:0%;} 50% { width:0px; opacity:100%;} 100%{ width:60%;}  }
-@-webkit-keyframes animMysql   {0%  { width:0px; opacity:0%;} 50% { width:0px; opacity:100%;} 100%{ width:60%;}  }
-
-.animGit
-{
-    -moz-animation:animGit 2s ease-out;
-    -webkit-animation:animGit 2s ease-out;
-}
-
-@-moz-keyframes animGit       {0%  { width:0px; opacity:0%;} 50% { width:0px; opacity:100%;} 100%{ width:60%;}  }
-@-webkit-keyframes animGit   {0%  { width:0px; opacity:0%;} 50% { width:0px; opacity:100%;} 100%{ width:60%;}  }
-
-
 .title
 {
     -moz-animation:title 1s ease-out;
@@ -176,7 +126,7 @@ button .barColor
 @-moz-keyframes title     {0%  { margin-left:-200px;} 100%{ margin-left:0px;}  }
 @-webkit-keyframes title   {0%  { margin-left:-200px;} 100%{ margin-left:0px;}  }
 
-.imgKwoon, .animSkill, .portfolioTablet, .iphone, .text1, .portfolioIphone
+.imgKwoon, .animSkill, .portfolioTablet, .text1, .portfolioIphone
 {
     -moz-animation:animImg 1s linear;
     -webkit-animation:animImg 1s linear;
@@ -193,21 +143,3 @@ button .barColor
 
 @-moz-keyframes animImg       {0%  { opacity:0;} 50%  { opacity:0;} 100%{ opacity:100%;}  }
 @-webkit-keyframes animImg   {0%  { opacity:0;} 50%  { opacity:0;} 100%{ opacity:100%;}  }
-
-.text3
-{
-    -moz-animation:animImg 3s linear;
-    -webkit-animation:animImg 3s linear;
-}
-
-@-moz-keyframes animImg       {0%  { opacity:0;} 75%  { opacity:0;} 100%{ opacity:100%;}  }
-@-webkit-keyframes animImg   {0%  { opacity:0;} 75%  { opacity:0;} 100%{ opacity:100%;}  }
-
-.animTable
-{
-    -moz-animation:animTable 1s linear;
-    -webkit-animation:animTable 1s linear;
-}
-
-@-moz-keyframes animTable     {0%  { margin-bottom:-300px;} 100%{ margin-bottom:0px;}  }
-@-webkit-keyframes animTable   {0%  { margin-bottom:-300px;} 100%{ margin-bottom:0px;}  }
