New project added, some colors style changed, more browsers supports for animations in skills section

--- a/css/master.css
+++ b/css/master.css
@@ -58,12 +58,12 @@ nav, .title
 .title
 {
     margin: 5px auto;
-    color: gold;
+    color: lime;
 }
 
 .title2
 {
-    color: gold;
+    color: lime;
 }
 
 .brandName
