CV updated,new links to CV added, font-color for titles changed, Background for page 404 changed to winter edition

--- a/css/master.css
+++ b/css/master.css
@@ -58,12 +58,12 @@ nav, .title
 .title
 {
     margin: 5px auto;
-    color: lime;
+    color: deepskyblue;
 }
 
 .title2
 {
-    color: lime;
+    color: deepskyblue;
 }
 
 .brandName
